UX improvements for "show more results".